# Django-Email-Client

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
src/config/: asgi.py  environ.py  settings.py  urls.py  wsgi.py
src/email_client/: admin.py  forms.py  models.py  views.py
src/email_client/migrations/: 0001_initial.py
src/templates/email_client/: base.html  inbox_page.html  login.html
