[tool.poetry]
name = "email-client"
version = "0.1.0"
description = ""
authors = ["TaleeBarbieri <barbieri.talee@gmail.com>"]
packages = [{include = "email_client", from='src'}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
requests = "^2.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
